Fixed requested changes

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <img class="marvel-icon" src="./marvel.png" alt="Marvel" width="227px" />
       <nav class="navbar">
         <ul>
-          <li class="nav-link active"><a href=""></a>HOME</li>
-          <li class="nav-link"><a href=""></a>COMICS</li>
-          <li class="nav-link"><a href=""></a>GAMES</li>
-          <li class="nav-link"><a href=""></a>NEWS</li>
+          <li class="nav-link active"><a href="#">HOME</a></li>
+          <li class="nav-link"><a href="#">COMICS</a></li>
+          <li class="nav-link"><a href="#">GAMES</a></li>
+          <li class="nav-link"><a href="#">NEWS</a></li>
         </ul>
-        <img class="search" src="./search-icon.svg" alt="Search" width="35" />
+        <img class="search" src="./search-icon.svg" alt="Search" width="35px" />
         <img class="user" src="./user.png" alt="user" width="110px" />
       </nav>
     </header>
