move images to a folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="container">
     <header class="header">
-      <img class="marvel-logo" src="./marvel.png" alt="Marvel" />
+      <img class="marvel-logo" src="./assets/marvel.png" alt="Marvel" />
       <nav class="navbar">
         <ul class="navlist">
           <li class="active"><a href="#">HOME</a></li>
@@ -25,12 +25,12 @@
           <li><a href="#">GAMES</a></li>
           <li><a href="#">NEWS</a></li>
         </ul>
-        <img class="search" src="./search-icon.svg" alt="Search" />
-        <img class="user" src="./user.png" alt="user" />
+        <img class="search" src="./assets/search-icon.svg" alt="Search" />
+        <img class="user" src="./assets/user.png" alt="user" />
       </nav>
     </header>
     <div class="left">
-      <img class="marvel-studio" src="./marvel-studio.png" alt="Marvel Studios" width="250" />
+      <img class="marvel-studio" src="./assets/marvel-studio.png" alt="Marvel Studios" width="250" />
       <h1 class="title">SPIDER-MAN</h1>
       <h2 class="subtitle">The Beginning</h2>
       <section>
@@ -41,13 +41,13 @@
         </p>
       </section>
       <div class="actions">
-        <img class="play" src="./play-icon.svg" alt="Play" width="80px" />
+        <img class="play" src="./assets/play-icon.svg" alt="Play" width="80px" />
         <p class="watch-now">watch now</p>
         <button class="more-info">more info</button>
       </div>
     </div>
     <div class="right side">
-      <img class="spiderman" src="./spiderman.png" alt="spiderman" />
+      <img class="spiderman" src="./assets/spiderman.png" alt="spiderman" />
     </div>
   </body>
 </html>
